# word-app

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
src/word_app/: exceptions.py
src/word_app/app/: __init__.py  base.py
src/word_app/app/tui/: _models.py  constants.py  ext.py  factory.py  main.css  main.py  theme.py  utils.py
src/word_app/app/tui/screens/: home.py  (+2 more)
src/word_app/data/: models.py  vo.py
src/word_app/dev/: fake.py  fake_detail_provider.py
src/word_app/entry/: __main__.py  tui.py
src/word_app/infra/: factories.py
src/word_app/infra/datamuse/: suggestion_provider.py
src/word_app/infra/worknik/: transformers.py  wdp.py
src/word_app/lib/: __init__.py
src/word_app/lib/_shr/: __init__.py  models.py  utils.py
src/word_app/lib/darkdetect/: __init__.py  _mac_detect.py  _windows_detect.py
src/word_app/lib/datamuse/: _transformer.py  client.py  endpoints.py
src/word_app/lib/wordnik/: _transformer.py  client.py  endpoints.py  models.py  vo.py
src/word_app/locales/: word_app.pot
src/word_app/services/search/: base.py  parsers.py
src/word_app/services/wdp/: __init__.py  base.py
tests/data/search_providers/: test_parser.py
tests/search/: test_parser.py
tests/services/search/: test_parsers.py
word_app/: __init__.py  __main__.py  app.css  app.py  app_conf.py  ext.py  io.py  lex.py  utils.py
word_app/app/: conf.py  factory.py  main.css  main.py
word_app/data/: grammar.py  language.py  models.py  sources.py  transformers.py
word_app/data/detail_providers/: base.py  multisource_detail_provider.py
word_app/data/search_providers/: datamuse.py  models.py  parser.py
word_app/data/services/: base.py  wordnik.py
word_app/data/word_providers/: base.py
word_app/data/wordnik/: service.py  sources.py  transformer.py
word_app/dev/: assemble_screen.py  fake.py  fake_detail_provider.py  playground.py
word_app/lib/: utils.py
word_app/lib/darkdetect/: __init__.py  _linux_detect.py  _mac_detect.py  _windows_detect.py
word_app/lib/datamuse/: client.py  conf.py  exceptions.py  models.py  transformer.py
word_app/lib/wordnik/: client.py  conf.py  exceptions.py  models.py  transformer.py
word_app/locales/: word_app.pot
word_app/locales/en_US/LC_MESSAGES/: word_app.mo  word_app.po
word_app/search/: parser.py
word_app/ui/: constants.py  containers.py  theme.py  utils.py
word_app/ui/navigation/: common.py  core.py  screens.py
word_app/ui/screens/: __init__.py  help.py  home.py  settings.py  word_detail.py
word_app/ui/widgets/: __init__.py  labels.py  section_static.py  sidebar.py  switch_with_label.py
word_app/usr/: .env.example
(+14 files in other folders)
