[tool.poetry]
name = "word-app"
version = "0.1.0"
description = ""
authors = ["aaronmarkey <markey@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^5.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
textual-dev = "^1.7.0"

[tool.ruff]
line-length = 80

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
