[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "word-app"
version = "0.1.0"
description = ""
authors = ["aaronmarkey <markey@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^5.3"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
wordnik-py3 = "^2.1.2"
pyperclip = "^1.9.0"
httpx = "^0.28.1"
cachetools = "^6.1.0"
art = "^6.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
textual-dev = "^1.7.0"
factory-boy = "^3.3.3"
mypy = "^1.17.1"
pytest = "^8.4.1"
textual-cookbook = "^0.4"

[tool.mypy]
exclude = [
    "dev/",
    "lib/darkdetect/",
    "test/"
]
exclude_gitignore = true
python_version = "3.11"
packages = ["word_app"]

[[tool.mypy.overrides]]
module = ["wordnik", "wordnik.*", "pyperclip"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "word_app/lib/darkdetect",
]
indent-width = 4
line-length = 80
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
